--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,6 @@ passlib[bcrypt]>=1.7.4
 anthropic>=0.7.0
 python-dotenv>=1.0.0
 pytz>=2023.3
-aiofiles>=23.2.0 
+aiofiles>=23.2.0
+sqlalchemy>=2.0.0
+alembic>=1.12.0 
