--- a/vercel.json
+++ b/vercel.json
@@ -2,30 +2,34 @@
   "version": 2,
   "builds": [
     {
-      "src": "static/**/*",
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    },
+    {
+      "src": "static/**",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/",
-      "dest": "/static/index.html"
+      "src": "/api/(.*)",
+      "dest": "/api/index.py"
     },
     {
       "src": "/static/(.*)",
       "dest": "/static/$1"
     },
     {
+      "src": "/",
+      "dest": "/static/index.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "/static/index.html"
     }
   ],
-  "functions": {
-    "api/**/*.py": {
-      "runtime": "python3.9"
-    }
-  },
   "env": {
-    "PYTHONPATH": "."
+    "PYTHONPATH": ".",
+    "ALLOWED_ORIGINS": "https://mara-energy-platform.vercel.app,http://localhost:8000"
   }
 }
